# sfml_ui

./: .gitignore  CMakeLists.txt  conanfile.txt  run_conan.bat  run_conan.sh
sfml_ui/: CMakeLists.txt  main.cpp
sfml_ui/core/: CMakeLists.txt
sfml_ui/core/include/core/: core.hpp  engine.hpp
sfml_ui/core/src/: base_module.cpp  base_module.hpp  core.cpp  engine.cpp  module_a.cpp  module_a.hpp  module_b.cpp  module_b.hpp
sfml_ui/ui/: CMakeLists.txt
sfml_ui/ui/include/ui/: color.hpp  rect_t.hpp  text_t.hpp  ui.hpp  window_manager.hpp  window_manager_fake.hpp  window_manager_interface.hpp
sfml_ui/ui/src/: color_adapter.hpp  layer_interface.hpp  layer_rect.cpp  layer_rect.hpp  layer_text.cpp  layer_text.hpp  ui.cpp  window_manager.cpp
